=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Merged: Merge changes r6205 - r6236 from the trunk. (windmillway)
 - Modified: Admin Page "Module Administration Tab" link. Tidied up Lightbox config return button links. (windmillway)
 - Fixed: Problem with Admin page. Added Lightbox to Module Administration Settings page. Minor css adjustments to Simplyxxx themes. (windmillway)
 - Merged: Merge changes r6120 - r6204 from the trunk. (windmillway)
 - Modified: Theme css relocation for all Tab management (jquery-ui) theme css files (windmillway) 
 - Added: Manage Links to Thumbnail drop Down Menu on Album Page (windmillway)
 - Modified theme css files for tab management (windmillway)
 - Merged: Merge changes r6095 - r6119 from the trunk. (windmillway)
 - Added FamilySearch module (yalnifj)
 - Moved new_indi to now be the main indi page. (yalnifj)
 - Merged: Merge changes r6086 - r6094 from the trunk. (windmillway)
 - Changed: Removed some css colour inline items not required (windmillway)
 - Changed: Fixed a few bugs in Census column hide/show algorithms (windmillway) 
 - Merged: Merge changes r6077- r6086 from the trunk. (windmillway)
 - Added: More columns for USA Census years. USA 1790-1840 years still left to do (windmillway)
 - Merged: Merge changes r6064- r6076 from the trunk. (windmillway)
 - Cleaned up "View" Census Header text and associated tooltip text. (windmillway)
 - Added: CA "Templates" for USA for years (1900, 1890, 1880, 1870, 1860 and 1850), also used Nigels latest css values (modified a bit) (windmillway)
 - Added: Notes Input field, also if the Notes, Enumeration, or Locality fields are empty, the line is completely removed in the Shared note. (windmillway)